--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -10,18 +10,19 @@
 
 		.map-left {
 			position : relative;
+			height: 700px;
 			width: 35%;
 			padding: 20px;
-			margin: 50px 5%;
+			margin: auto 5%;
 
 			text-align: left;
 			background-color: $dark-color;
 			border: 1px solid $secondary-color;
 
-			.fact-image {
+			.fact-header {
 				height: 200px;
 
-				.zone-image {
+				.fact-image {
 					height: 100%;
 					width: 100%;
 				}
@@ -34,23 +35,23 @@
 				border-top: 1px solid $secondary-color;
 				border-bottom: 1px solid $secondary-color;
 
-				.zone-title {
+				.fact-text {
 					text-align: center;
 				}
 			}
 
-			.fact-texts {
+			.fatc-description .fact-text {
 				height: 300px;
     		overflow-y: auto;
 			}
 
-			.fact-comments {
+			.fact-footer {
 				height: 60px;
 				margin: 5px 0;
     		padding: 5px 0;
 				border-top: 1px solid $secondary-color;
 
-				.zone-title {
+				.fact-text {
 					font-size: 14px;
 					color: $secondary-color;
 					text-align: center;
@@ -60,14 +61,21 @@
 		}
 
 		.map-right {
-			width: 65%;
 			position: relative;
+			height: 700px;
+			width: 65%;
 			margin: auto 5% auto 0;
 
 			.map-background {
 				height: auto;
 				width: 100%;
 				margin: auto 0;
+			}
+
+			.map-icon {
+				position: absolute;
+				height: 50px;
+				width: 50px;
 			}
 		}
   }
