--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -13,7 +13,7 @@
 			height: 700px;
 			width: 35%;
 			padding: 20px;
-			margin: auto 5%;
+			margin: auto 0% auto 5%;
 
 			text-align: left;
 			background-color: $dark-color;
@@ -61,21 +61,53 @@
 		}
 
 		.map-right {
-			position: relative;
+			display: flex;
+  		flex-direction: column;
+  		justify-content: center;
 			height: 700px;
 			width: 65%;
-			margin: auto 5% auto 0;
+			margin: auto 2.5%;
 
 			.map-background {
-				height: auto;
 				width: 100%;
-				margin: auto 0;
+			}
+
+			.map-icons{
+				position: relative;
 			}
 
 			.map-icon {
 				position: absolute;
 				height: 50px;
 				width: 50px;
+				margin-top: -25px;
+				margin-left: -25px;
+				cursor: pointer;
+			}
+
+			.map-icon-00 {
+				top: 45%;
+				left: 75%;
+			}
+
+			.map-icon-01 {
+				top: 42%;
+				left: 72%;
+			}
+
+			.map-icon-02 {
+				top: 69%;
+				left: 73%;
+			}
+
+			.map-icon-03 {
+				top: 77%;
+				left: 76%;
+			}
+
+			.map-icon-04 {
+				top: 20%;
+				left: 20%;
 			}
 		}
   }
