Refactor : Little fixes like logo and fact colors

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div [ngClass]="{'active': selection == 0 }" class="head-container container01">
   <div class="title-container">
-    <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
+    <img class="logo-image" src="assets/images/logo.png" alt="">
     <h4>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</h4>
     <h1>{{ 'HOME.UNIVERSE.TITLE' | translate | uppercase }}</h1>
     <p>{{ 'HOME.UNIVERSE.RESUME' | translate }}</p>
