--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-section">
   <div class="header-main">
-    <img class="header-logo" src="/assets/images/logo.png" alt="" routerLink="">
+    <img class="header-logo" src="/assets/images/little_logo.png" alt="" routerLink="">
     <a class="header-title" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="" [innerHtml]="'HEADER.HOME' | translate | uppercase"></a>
   </div>
   <nav>
