--- a/src/app/pages/universe/population/population.component.scss
+++ b/src/app/pages/universe/population/population.component.scss
@@ -43,7 +43,7 @@
 
 			margin: 0;
 			border-radius: 50%;
-			border: 2px solid $dark-secondary-color;
+			border: 2px solid $light-color;
 			cursor: pointer;
 
 			&.main {
