--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -14,10 +14,7 @@
 			width: 35%;
 			padding: 20px;
 			margin: auto 0% auto 5%;
-
 			text-align: left;
-			background-color: $dark-color;
-			border: 1px solid $secondary-color;
 
 			.fact-header {
 				height: 200px;
@@ -25,6 +22,7 @@
 				.fact-image {
 					height: 100%;
 					width: 100%;
+					mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
 				}
 			}
 
