--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -8,6 +8,18 @@
 		background-size: cover;
 		background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8), rgba($dark-primary-color, 0.8), rgba($dark-primary-color, 1.0)), url("/assets/images/home_01.png");
 
+		::-webkit-scrollbar {
+			width: 10px;
+		}
+
+		::-webkit-scrollbar-track {
+			background: none;
+		}
+
+		::-webkit-scrollbar-thumb {
+			border-radius: 5px;
+		}
+
 		.map-left {
 			position : relative;
 			height: 700px;
@@ -22,7 +34,7 @@
 				.fact-image {
 					height: 100%;
 					width: 100%;
-					mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+					mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,0));
 				}
 			}
 
