Feat : Finish the about and legacy pages

--- a/src/app/pages/legacy/legacy.component.html
+++ b/src/app/pages/legacy/legacy.component.html
@@ -1,9 +1,12 @@
-<h1>
-  {{ 'LEGACY.TITLE' | translate }}
-</h1>
-<p innerHtml="{{ 'LEGACY.STATUT' | translate }}"></p>
-<p innerHtml="{{ 'LEGACY.HOST' | translate }}"></p>
-<p>
-  {{ 'LEGACY.CONTACT' | translate }}
-  <strong><a href="http://www.ovh.com/fr/support/" target="_blank">http://www.ovh.com/fr/support/</a></strong>
-</p>
+<div class="legacy-container">
+	<div class="legacy-description">
+		<h1>{{ 'LEGACY.TITLE' | translate }}</h1>
+		<div separator></div>
+		<p innerHtml="{{ 'LEGACY.STATUT' | translate }}"></p>
+		<p innerHtml="{{ 'LEGACY.HOST' | translate }}"></p>
+		<p>
+			{{ 'LEGACY.CONTACT' | translate }}
+			<strong><a href="http://www.ovh.com/fr/support/" target="_blank">http://www.ovh.com/fr/support/</a></strong>
+		</p>
+	</div>
+</div>
