--- a/src/app/pages/legacy/legacy.component.scss
+++ b/src/app/pages/legacy/legacy.component.scss
@@ -1,3 +1,16 @@
+@import "../../../styles/variables.scss";
+
 :host {
-  text-align: center;
+	.legacy-container {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		height: 550px;
+
+		.legacy-description {
+			width: 50%;
+			text-align: center;
+			margin: auto;
+		}
+	}
 }
