--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,5 +1,7 @@
 [separator] {
-  height: 6px;
+	height: 5px;
+	margin-top: 15px;
+	margin-bottom: 10px;
   border-top : 5px solid $dark-secondary-color;
   border-bottom: 1px solid $light-secondary-color;
 }
