--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,8 +1,18 @@
-<div style="text-align:center">
-  <h1>
-    {{ 'ABOUT.TITLE' | translate }}
-  </h1>
-  <h2>
-    {{ 'BODY.WAIT' | translate }}
-  </h2>
+<div class="about-container">
+	<div class="about-left">
+		<img src="/assets/images/about/me.png" alt="">
+	</div>
+	<div class="about-right">
+		<h1>{{ 'ABOUT.TITLE' | translate }}</h1>
+		<div separator></div>
+		<h2>{{ 'ABOUT.INTRODUCTION' | translate | uppercase }}</h2>
+		<p>{{ 'ABOUT.INTRODUCTIONTEXT' | translate }}</p>
+		<h4>{{ 'ABOUT.CONTACT' | translate | uppercase }}</h4>
+		<p>{{ 'ABOUT.CONTACTTEXT' | translate }}<a href="mailto:spefire@gmail.com">spefire@gmail.com</a></p>
+		<h2>{{ 'ABOUT.PROJECTS' | translate | uppercase }}</h2>
+		<h4>{{ 'ABOUT.PROJECTSTEXT.PROJECT01' | translate | uppercase }}</h4>
+		<p>{{ 'ABOUT.PROJECTSTEXT.PROJECT01TEXT' | translate }}</p>
+		<h4>{{ 'ABOUT.PROJECTSTEXT.PROJECT02' | translate | uppercase }}</h4>
+		<p>{{ 'ABOUT.PROJECTSTEXT.PROJECT02TEXT' | translate }}</p>
+	</div>
 </div>
