--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,7 +8,7 @@ html, body {
 body {
   z-index: 1;
   color: $light-color;
-	background-color: $dark-primary-color;
+	background: linear-gradient(45deg, $dark-color, $dark-color, $primary-color);
 }
 
 h1 {
