Feat : Add new logos !!!!!

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="bigfooter" class="footer-infos">
 	<div class="footer-left">
 		<div class="footer-container">
-			<img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
+			<img class="logo-image" src="/assets/images/logo.png" alt="">
 			<p>{{ 'FOOTER.RESUME' | translate }}</p>
 			<span routerLink="about"><i class="fas fa-chevron-right"></i>{{ 'FOOTER.SEEMORE' | translate | uppercase }}</span>
 		</div>
