--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,9 @@
 <div *ngIf="bigfooter" class="footer-infos">
 	<div class="footer-left">
 		<div class="footer-container">
-			<img class="logo-image" src="/assets/images/logo.png" alt="">
+			<img class="logo-image" src="/assets/images/logo.png" alt="" routerLink="">
+		</div>
+		<div class="footer-container">
 			<p>{{ 'FOOTER.RESUME' | translate }}</p>
 			<span routerLink="about"><i class="fas fa-chevron-right"></i>{{ 'FOOTER.SEEMORE' | translate | uppercase }}</span>
 		</div>
@@ -27,7 +29,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="https://www.instagram.com/spefire_insta" target="_blank">
+				<a href="https://www.instagram.com/spefireflies" target="_blank">
 					<span></span>
 					<span></span>
 					<span></span>
@@ -57,7 +59,7 @@
         </a>
       </li>
       <li>
-        <a href="https://www.instagram.com/spefire_insta" target="_blank">
+        <a href="https://www.instagram.com/spefireflies" target="_blank">
           <i class="fab fa-instagram"></i>
         </a>
       </li>
