--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -10,18 +10,18 @@
 			border-top: 1px solid $dark-secondary-color;
 
 			.footer-left {
-				position: relative;
+				display: flex;
 				width: 50%;
 				margin: auto 0;
 
 				.footer-container {
-					width: 70%;
-					padding: 0 15%;
+					width: 50%;
+					padding: 0 5%;
+					margin: auto;
 
 					.logo-image {
-						height: 50px;
-						width: 125px;
-						border: 1px solid $dark-color;
+						width: 100%;
+						cursor: pointer;
 					}
 
 					span {
