Style : Change the display for population text and images

--- a/src/app/pages/universe/population/population.component.html
+++ b/src/app/pages/universe/population/population.component.html
@@ -35,7 +35,7 @@
 	</div>
 	<div class="population-text">
 		<h2>{{ peopleTitle | uppercase }}</h2>
-		<p>{{ peopleText01 }}<br><br>{{ peopleText02 }}<br><br></p>
-		<h4>{{ 'UNIVERSE.POPULATION.LOCATION' | translate | uppercase }} : {{ peopleLocation | translate }}</h4>
+		<p class="population-description">{{ peopleText01 }}<br><br>{{ peopleText02 }}<br><br></p>
+		<p class="population-location">{{ 'UNIVERSE.POPULATION.LOCATION' | translate | uppercase }} : {{ peopleLocation | translate }}</p>
 	</div>
 </div>
