--- a/src/app/pages/universe/population/population.component.scss
+++ b/src/app/pages/universe/population/population.component.scss
@@ -44,6 +44,7 @@
 			margin: 0;
 			border-radius: 50%;
 			border: 2px solid $light-color;
+			background-color: rgba($dark-color, 0.2);
 			cursor: pointer;
 
 			&.main {
@@ -58,14 +59,15 @@
 
 		.population-text {
 			text-align: center;
-			max-width: 75%;
 			height: 275px;
 
-			p {
-				font-size: 14px;
+			.population-description {
+				width: 60%;
+    		margin: auto;
+			}
+
+			.population-location {
 				color: $secondary-color;
-				margin: 0;
-				padding: 4px 30px 4px 0;
 				font-style: italic;
 			}
 		}
