--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -3,7 +3,7 @@
 		<img src="/assets/images/about/diamond.png" alt="">
 	</div>
 	<div class="about-right">
-		<h1>{{ 'ABOUT.TITLE' | translate }}</h1>
+		<h1>{{ 'PAGE.ABOUT' | translate }}</h1>
 		<div separator></div>
 		<h2>{{ 'ABOUT.INTRODUCTION' | translate | uppercase }}</h2>
 		<p>{{ 'ABOUT.INTRODUCTIONTEXT' | translate }}</p>
