--- a/src/app/pages/legacy/legacy.component.html
+++ b/src/app/pages/legacy/legacy.component.html
@@ -1,6 +1,6 @@
 <div class="legacy-container">
 	<div class="legacy-description">
-		<h1>{{ 'LEGACY.TITLE' | translate }}</h1>
+		<h1>{{ 'PAGE.LEGACY' | translate }}</h1>
 		<div separator></div>
 		<p innerHtml="{{ 'LEGACY.STATUT' | translate }}"></p>
 		<p innerHtml="{{ 'LEGACY.HOST' | translate }}"></p>
