--- a/src/app/pages/universe/crystals/crystals.component.html
+++ b/src/app/pages/universe/crystals/crystals.component.html
@@ -1,5 +1,5 @@
 <head-universe
-	title="{{ 'PAGE.CRYSTALS.TITLE' | translate | uppercase }}"
+	title="{{ 'PAGE.CRYSTALS' | translate | uppercase }}"
 	section01="{{ 'UNIVERSE.CRYSTALS.SECTION01' | translate }}"
 	section02="{{ 'UNIVERSE.CRYSTALS.SECTION02' | translate }}"
 	section03="{{ 'UNIVERSE.CRYSTALS.SECTION03' | translate }}"
