--- a/src/app/pages/universe/population/population.component.html
+++ b/src/app/pages/universe/population/population.component.html
@@ -1,5 +1,5 @@
 <head-universe
-	title="{{ 'PAGE.POPULATION.TITLE' | translate | uppercase }}"
+	title="{{ 'PAGE.POPULATION' | translate | uppercase }}"
 	section01="{{ 'UNIVERSE.POPULATION.SECTION01' | translate }}"
 	section02="{{ 'UNIVERSE.POPULATION.SECTION02' | translate }}"
 	section03="{{ 'UNIVERSE.POPULATION.SECTION03' | translate }}"
