--- a/src/app/pages/universe/religion/religion.component.html
+++ b/src/app/pages/universe/religion/religion.component.html
@@ -1,5 +1,5 @@
 <head-universe
-	title="{{ 'PAGE.RELIGION.TITLE' | translate | uppercase }}"
+	title="{{ 'PAGE.RELIGION' | translate | uppercase }}"
 	section01="{{ 'UNIVERSE.RELIGION.SECTION01' | translate }}"
 	section02="{{ 'UNIVERSE.RELIGION.SECTION02' | translate }}"
 	section03="{{ 'UNIVERSE.RELIGION.SECTION03' | translate }}"
