--- a/src/app/pages/universe/crystals/crystals.component.html
+++ b/src/app/pages/universe/crystals/crystals.component.html
@@ -8,10 +8,10 @@
 </head-universe>
 <div class="crystal-container">
 	<div class="crystal-imgs">
-		<img class="img-main" src="assets/images/crystals/crystal.png" alt="">
-		<img class="img-data01" src="assets/images/crystals/crystal_data01.png" alt="">
-		<img class="img-data02" src="assets/images/crystals/crystal_data02.png" alt="">
-		<img class="img-data03" src="assets/images/crystals/crystal_data03.png" alt="">
+		<img class="crystal-main" src="assets/images/crystals/crystal.png" alt="">
+		<img class="crystal-data01" src="assets/images/crystals/crystal_data01.png" alt="">
+		<img class="crystal-data02" src="assets/images/crystals/crystal_data02.png" alt="">
+		<img class="crystal-data03" src="assets/images/crystals/crystal_data03.png" alt="">
 	</div>
 	<div class="crystal-text">
 		<h4>{{ 'UNIVERSE.CRYSTALS.PROPERTIES.SUBTITLE' | translate | uppercase }}</h4>
