--- a/src/app/pages/universe/population/population.component.scss
+++ b/src/app/pages/universe/population/population.component.scss
@@ -30,7 +30,7 @@
 			height: 275px;
 		}
 
-		.population-selectimg {
+		.population-selection {
 			height: 50px;
 			width: 50px;
 			margin: 0 10px;
@@ -57,11 +57,11 @@
 			}
 		}
 
-		.population-text {
+		.population-description {
 			text-align: center;
 			height: 275px;
 
-			.population-description {
+			.population-text {
 				width: 60%;
     		margin: auto;
 			}
