--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="bigfooter" class="footer-infos">
 	<div class="footer-left">
 		<div class="footer-container">
-			<img class="logo-image" src="/assets/images/logo.png" alt="" routerLink="">
+			<img src="/assets/images/logo.png" alt="" routerLink="">
 		</div>
 		<div class="footer-container">
 			<p>{{ 'FOOTER.RESUME' | translate }}</p>
@@ -42,7 +42,7 @@
 </div>
 
 <div class="footer-navigation">
-  <nav [ngClass]="{ 'bigfooter-nav' : bigfooter }">
+  <nav [ngClass]="{ 'bigfooter-section' : bigfooter }">
     <a routerLinkActive="active" routerLink="legacy" [innerHtml]="'PAGE.LEGACY' | translate | uppercase"></a>
     <a routerLinkActive="active" routerLink="about" [innerHtml]="'PAGE.ABOUT' | translate | uppercase"></a>
   </nav>
