--- a/src/app/pages/universe/crystals/crystals.component.scss
+++ b/src/app/pages/universe/crystals/crystals.component.scss
@@ -35,21 +35,21 @@
 				height: 450px;
 			}
 
-			.img-main {
+			.crystal-main {
 				animation: 3s infinite alternate animMain;
 			}
 
-			.img-data01 {
+			.crystal-data01 {
 				opacity: 0;
 				animation: 3s infinite alternate animMain, 6s infinite alternate animData;
 			}
 
-			.img-data02 {
+			.crystal-data02 {
 				opacity: 0;
 				animation: 3s infinite alternate animMain, 4s 2s infinite alternate animData;
 			}
 
-			.img-data03 {
+			.crystal-data03 {
 				opacity: 0;
 				animation: 3s infinite alternate animMain, 6s 4s infinite alternate animData;
 			}
