--- a/src/app/pages/universe/religion/religion.component.scss
+++ b/src/app/pages/universe/religion/religion.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/variables.scss";
 
 :host {
-	.entity-container {
+	.religion-container {
 		position: relative;
 		display: flex;
 		flex-direction: column;
@@ -24,7 +24,7 @@
 			background-image: linear-gradient(0deg, rgba($dark-color, 0.8), rgba($dark-color, 0.8), rgba($dark-primary-color, 0.8), rgba($dark-primary-color, 1.0)), url("/assets/images/home_01.png");
 		}
 
-		.entity-list {
+		.religion-list {
 			display: flex;
 			flex-direction: row;
 			justify-content: center;
@@ -37,7 +37,7 @@
 			}
 		}
 
-		.entity-text {
+		.religion-description {
 			text-align: left;
 			max-width: 50%;
 
