--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -79,7 +79,7 @@ button {
 	outline : none;
 
   background: none;
-  border: 1px solid $dark-secondary-color;
+  border: 1px solid $secondary-color;
   color: $light-secondary-color;
 }
 
