--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,8 +3,6 @@ $dark-color: #141412;
 
 $dark-primary-color: #134457;
 $primary-color: #247899;
-$light-primary-color: #7ADAFF;
 
-$dark-secondary-color: #CAC080;
-$secondary-color: #ECDE93;
+$secondary-color: #DAD090;
 $light-secondary-color: #FAF0A0;
