--- a/src/app/pages/universe/population/population.component.scss
+++ b/src/app/pages/universe/population/population.component.scss
@@ -52,7 +52,7 @@
 				width: 200px;
 
 				margin: 0 50px;
-				border: 6px double $dark-secondary-color;
+				border: 6px double $secondary-color;
 				cursor: default;
 			}
 		}
