--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -32,6 +32,7 @@
 				img {
 					height: 100%;
 					width: 100%;
+					border-top: 1px solid $secondary-color;
 					mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,1), rgba(0,0,0,0));
 				}
 			}
