--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,17 +2,6 @@
 	height: 5px;
 	margin-top: 15px;
 	margin-bottom: 10px;
-  border-top : 5px solid $dark-secondary-color;
+  border-top : 5px solid $secondary-color;
   border-bottom: 1px solid $light-secondary-color;
-}
-
-[container] {
-  max-width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-[padding-vert] {
-  padding-top: 50px;
-  padding-bottom: 50px;
 }
