Refactor : Change folders of image and change icons to svg

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,4 +5,4 @@ $dark-primary-color: #134457;
 $primary-color: #247899;
 
 $secondary-color: #DAD090;
-$light-secondary-color: #FAF0A0;
+$light-secondary-color: #FCF8B0;
