--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -45,10 +45,10 @@
 				padding: 2px;
 				cursor: pointer;
 				background-size: cover;
-				background-image: url("/assets/images/little_logo.png");
+				background-image: url("/assets/images/icon_logo.svg");
 
 				&:hover {
-					background-image: url("/assets/images/little_hover_logo.png");
+					background-image: url("/assets/images/icon_logo_hover.svg");
 				}
       }
 
