--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -36,22 +36,27 @@
 			<h4 *ngIf="selectedFact.zone=='Zones'">{{ 'UNIVERSE.WORLD.DANGER' | translate | uppercase }} : {{ 'UNIVERSE.WORLD.ZONES.DANGER' | translate }} / {{ 'UNIVERSE.WORLD.CLIMATE' | translate | uppercase }} : {{ 'UNIVERSE.WORLD.ZONES.CLIMATE' | translate }}</h4>
 		</div>
 		<div class="map-icons">
-			<img *ngIf="selectedFact.zone=='Faradel'" class="map-background" src="assets/images/map_faradel.png" alt="">
-			<img *ngIf="selectedFact.zone=='Jirakan'" class="map-background" src="assets/images/map_jirakan.png" alt="">
-			<img *ngIf="selectedFact.zone=='Imerys'" class="map-background" src="assets/images/map_imerys.png" alt="">
-			<img *ngIf="selectedFact.zone=='Kazador'" class="map-background" src="assets/images/map_kazador.png" alt="">
-			<img *ngIf="selectedFact.zone=='Shivazen'" class="map-background" src="assets/images/map_shivazen.png" alt="">
-			<img *ngIf="selectedFact.zone=='Zones'" class="map-background" src="assets/images/map_zones.png" alt="">
-			<img *ngIf="select != 0" class="map-icon map-icon-00" src="assets/images/icon_map.png" alt="" (click)="setSelection(0)">
-			<img *ngIf="select == 0" class="map-icon map-icon-00" src="assets/images/icon_map_selected.png" alt="">
-			<img *ngIf="select != 1" class="map-icon map-icon-01" src="assets/images/icon_map.png" alt="" (click)="setSelection(1)">
-			<img *ngIf="select == 1" class="map-icon map-icon-01" src="assets/images/icon_map_selected.png" alt="">
-			<img *ngIf="select != 2" class="map-icon map-icon-02" src="assets/images/icon_map.png" alt="" (click)="setSelection(2)">
-			<img *ngIf="select == 2" class="map-icon map-icon-02" src="assets/images/icon_map_selected.png" alt="">
-			<img *ngIf="select != 3" class="map-icon map-icon-03" src="assets/images/icon_map.png" alt="" (click)="setSelection(3)">
-			<img *ngIf="select == 3" class="map-icon map-icon-03" src="assets/images/icon_map_selected.png" alt="">
-			<img *ngIf="select != 4" class="map-icon map-icon-04" src="assets/images/icon_map.png" alt="" (click)="setSelection(4)">
-			<img *ngIf="select == 4" class="map-icon map-icon-04" src="assets/images/icon_map_selected.png" alt="">
+			<img *ngIf="selectedFact.zone=='Faradel'" class="map-background" src="assets/images/world/map_faradel.png" alt="">
+			<img *ngIf="selectedFact.zone=='Jirakan'" class="map-background" src="assets/images/world/map_jirakan.png" alt="">
+			<img *ngIf="selectedFact.zone=='Imerys'" class="map-background" src="assets/images/world/map_imerys.png" alt="">
+			<img *ngIf="selectedFact.zone=='Kazador'" class="map-background" src="assets/images/world/map_kazador.png" alt="">
+			<img *ngIf="selectedFact.zone=='Shivazen'" class="map-background" src="assets/images/world/map_shivazen.png" alt="">
+			<img *ngIf="selectedFact.zone=='Zones'" class="map-background" src="assets/images/world/map_zones.png" alt="">
+			<img *ngIf="select == 0" class="map-icon map-icon-00" src="assets/images/world/icon_map_selected.svg" alt="">
+			<img *ngIf="select != 0" class="map-icon map-icon-00" src="assets/images/world/icon_map.svg" alt=""
+			(click)="setSelection(0)" (mouseover)="hoverIcon(0)" (mouseout)="unhoverIcon(0)">
+			<img *ngIf="select == 1" class="map-icon map-icon-01" src="assets/images/world/icon_map_selected.svg" alt="">
+			<img *ngIf="select != 1" class="map-icon map-icon-01" src="assets/images/world/icon_map.svg" alt=""
+			(click)="setSelection(1)" (mouseover)="hoverIcon(1)" (mouseout)="unhoverIcon(1)">
+			<img *ngIf="select == 2" class="map-icon map-icon-02" src="assets/images/world/icon_map_selected.svg" alt="">
+			<img *ngIf="select != 2" class="map-icon map-icon-02" src="assets/images/world/icon_map.svg" alt=""
+			(click)="setSelection(2)" (mouseover)="hoverIcon(2)" (mouseout)="unhoverIcon(2)">
+			<img *ngIf="select == 3" class="map-icon map-icon-03" src="assets/images/world/icon_map_selected.svg" alt="">
+			<img *ngIf="select != 3" class="map-icon map-icon-03" src="assets/images/world/icon_map.svg" alt=""
+			(click)="setSelection(3)" (mouseover)="hoverIcon(3)" (mouseout)="unhoverIcon(3)">
+			<img *ngIf="select == 4" class="map-icon map-icon-04" src="assets/images/world/icon_map_selected.svg" alt="">
+			<img *ngIf="select != 4" class="map-icon map-icon-04" src="assets/images/world/icon_map.svg" alt=""
+			(click)="setSelection(4)" (mouseover)="hoverIcon(4)" (mouseout)="unhoverIcon(4)">
 		</div>
 	</div>
 </div>
